syntax = "proto3";

package userpb;

option go_package = "github.com/wazwki/WearStore/user-service/api/proto/userpb";

import "google/api/annotations.proto";

service UserService {
  rpc RegisterUser(userpb.RegisterUserRequest) returns (userpb.RegisterUserResponse) {
    option (google.api.http) = {
      post: "/v1/users/register"
      body: "*"
    };
  }

  rpc LoginUser(userpb.LoginUserRequest) returns (userpb.LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/users/login"
      body: "*"
    };
  }

  rpc GetUser(userpb.GetUserRequest) returns (userpb.GetUserResponse) {
    option (google.api.http) = {
      get: "/v1/users/{id}"
    };
  }

  rpc UpdateUser(userpb.UpdateUserRequest) returns (userpb.UpdateUserResponse) {
    option (google.api.http) = {
      put: "/v1/users/{id}"
      body: "*"
    };
  }

  rpc DeleteUser(userpb.DeleteUserRequest) returns (userpb.DeleteUserResponse) {
    option (google.api.http) = {
      delete: "/v1/users/{id}"
    };
  }
}

message RegisterUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterUserResponse {
  string id = 1;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string created_at = 5;
  string updated_at = 6;
}
